--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
       <!-- Path to images as from index.html file -->
       <img src="./img/javascript.svg" alt="" />
     </section>
-
+    <section>
+      <h1>Example page title</h1>
+      <!-- Path to images as from index.html file -->
+      <img src="./img/javascript.svg" alt="" />
+    </section>
     <!-- Loads the specified .html file -->
 
     <script type="module" src="./main.js"></script>
